<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="383dp"
        android:layout_height="656dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.454">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/iniciarSesionPantalla"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="irIniciar"
                android:text="@string/btn_iniciar_pantalla"
                tools:text="@string/btn_iniciar_pantalla" />

            <Button
                android:id="@+id/registrarPantalla"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="irRegistrarse"
                android:text="@string/btn_registrar_pantalla"
                tools:text="@string/btn_registrar_pantalla" />

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#2AD3E4"
                    app:cardCornerRadius="20dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/descripcion_consejos" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:contentDescription="TODO"
                                app:srcCompat="@drawable/chat" />

                            <Button
                                android:id="@+id/button2"
                                style="@style/Widget.AppCompat.Button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:onClick="irconsejo"
                                android:text="@string/consejos_btn" />
                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#CF8787"
                    app:cardCornerRadius="20dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/descripcion_implementos" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView2"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                app:srcCompat="@drawable/casco"
                                tools:ignore="ImageContrastCheck" />

                            <Button
                                android:id="@+id/implementos"
                                style="@style/Widget.AppCompat.Button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:onClick="irimplemento"
                                android:text="@string/implementos_btn" />
                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#B99BD6"
                    app:cardCornerRadius="20dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/descripcion_bicis" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView3"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                app:srcCompat="@drawable/bicicleta" />

                            <Button
                                android:id="@+id/bicicletas"
                                style="@style/Widget.AppCompat.Button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:onClick="irbici"
                                android:text="@string/bicis_btn" />
                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#C57D70"
                    app:cardCornerRadius="20dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/descripcion_atracciones" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView4"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                app:srcCompat="@drawable/atracciones" />

                            <Button
                                android:id="@+id/atracciones"
                                style="@style/Widget.AppCompat.Button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:onClick="iratracciones"
                                android:text="@string/atracciones_btn" />
                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>